--- a/SlackonslaCertif/src/main/resources/application.properties
+++ b/SlackonslaCertif/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #BDD
-spring.datasource.url=jdbc:jtds:mysql://localhost/slackonscertif
+spring.datasource.url=jdbc:mysql://localhost/slackonscertif
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.username=root
 spring.datasource.password=
