--- a/SlackonslaCertif/pom.xml
+++ b/SlackonslaCertif/pom.xml
@@ -18,6 +18,23 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+	  <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        
+
+        <dependency>
+
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+
+            <artifactId>jackson-dataformat-xml</artifactId>
+
+           
+
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
